k8s/apps/default/envoy-echo-tap/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-echo-tap
  labels:
    app: envoy-echo-tap
spec:
  type: ClusterIP
  selector:
    app: envoy-echo-tap
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
