k8s/apps/default/envoy-echo-tap/app/httproute-admin.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-echo-tap-admin
spec:
  hostnames:
    - echo-tap-admin.cbannister.xyz
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: envoy-echo-tap
          port: 8080
    - backendRefs:
        - name: envoy-echo-tap-admin
          port: 9901
